# sequence

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml
.github/workflows/: ccpp-lin.yml  ccpp-win.yml  ccpp.yml
apps/: CMakeLists.txt
apps/lss/src/: lss.cpp
cmake/: sequence.pc.in  sequenceConfig.cmake.in  utils.cmake
doc/: Doxyfile  Doxyfile.in
include/: collection.h  seqparser.h  sequence.h
include/sequence/: collection.h  fileutils.h  sequence.h
src/: CMakeLists.txt  collection.cpp  fileutils.cpp  sequence.cpp
src/seq-parser/: CMakeLists.txt  collection.cpp  collection.h  parser.cpp  seqparser.cpp
src/seq-parser/include/: seqparser.h
src/seq-parser/src/: parser.cpp
src/sequence/: CMakeLists.txt  collection.cpp  sequence.cpp
test/: CMakeLists.txt  common_operations.cpp  fileutils.cpp  first.cpp  tests_main.cpp  tests_utils.cpp  tests_utils.h  using_collection.cpp
